--- a/projectMars_finalscript.json
+++ b/projectMars_finalscript.json
@@ -65,7 +65,7 @@ module.exports=[
             },
             {
                 text: "avoid",
-                motion: "sideFrip"
+                motion: ""rightFlip""
             },
             {
                 text: "none",
@@ -94,7 +94,7 @@ module.exports=[
             },
             {
                 text: "avoid",
-                motion: "sideFrip"
+                motion: ""rightFlip""
             },
             {
                 text: "none",
@@ -123,7 +123,7 @@ module.exports=[
             },
             {
                 text: "avoid",
-                motion: "sideFrip"
+                motion: ""rightFlip""
             },
             {
                 text: "none",
@@ -161,7 +161,7 @@ module.exports=[
             },
             {
                 text: "avoid",
-                motion: "sideFrip"
+                motion: ""rightFlip""
             },
             {
                 text: "none",
@@ -190,7 +190,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -219,7 +219,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -248,7 +248,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -277,7 +277,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -306,7 +306,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -335,7 +335,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -364,7 +364,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -393,7 +393,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -422,7 +422,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -451,7 +451,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -480,7 +480,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -509,7 +509,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -538,7 +538,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -567,7 +567,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -596,7 +596,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -625,7 +625,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -654,7 +654,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -683,7 +683,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -712,7 +712,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -741,7 +741,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -770,7 +770,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -808,7 +808,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -837,7 +837,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -866,7 +866,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -895,7 +895,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -924,7 +924,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -953,7 +953,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -982,7 +982,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1011,7 +1011,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1040,7 +1040,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1069,7 +1069,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1098,7 +1098,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1127,7 +1127,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1156,7 +1156,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1185,7 +1185,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1214,7 +1214,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1243,7 +1243,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1272,7 +1272,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1301,7 +1301,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1330,7 +1330,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1359,7 +1359,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1388,7 +1388,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1417,7 +1417,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1446,7 +1446,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1475,7 +1475,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1504,7 +1504,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1533,7 +1533,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1562,7 +1562,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1627,7 +1627,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1656,7 +1656,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1685,7 +1685,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1714,7 +1714,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1743,7 +1743,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1772,7 +1772,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1801,7 +1801,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1830,7 +1830,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1859,7 +1859,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1888,7 +1888,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
@@ -1917,7 +1917,7 @@ module.exports=[
         },
         {
             text: "avoid",
-            motion: "sideFrip"
+            motion: ""rightFlip""
         },
         {
             text: "none",
