--- a/projectMars_finalscript.json
+++ b/projectMars_finalscript.json
@@ -55,7 +55,7 @@
             "motion": [
                 {
                     "text": "delight",
-                    "motion": "frontFrip"
+                    "motion": "frontFlip"
                 },
                 {
                     "text": "angry",
